# dplib-py

./: .gitignore  404.html  <  LICENSE.md  Makefile  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: general.yaml
.nvim/: coc-settings.json
LICENSES/: MIT.txt
actions/dialect/: index.html
actions/package/: index.html
actions/resource/: index.html
actions/schema/: index.html
changelog/: index.html
contributing/: index.html
contributing/development/: index.html
converting-metadata/: index.html
data/: dialect-full.json  dialect-invalid.json  package-custom-profile.json  package-full.json  package-invalid-dereferencing.json  package-invalid.json  resource-full.json  resource-invalid-dereferencing.json  resource-invalid.json  schema-full.json  schema-invalid.json  schema-types.json  schema-with-profile.json  schema.json
data/cassettes/: test_check_package_custom_profile.yaml  test_dialect_profile.yaml  test_package_profile.yaml  test_resource_profile.yaml  test_schema_profile.yaml
data/plugins/ckan/: package.json
data/plugins/datacite/: package.json
data/plugins/dcat/: package.xml
data/plugins/github/: package.json
data/plugins/zenodo/: package.json
docs/: changelog.md  contributing.md  converting-metadata.md  index.md  installation.md  validating-metadata.md  working-with-models.md
docs/actions/: dialect.md  package.md  resource.md  schema.md
docs/contributing/: development.md
docs/documentation/: installation.md
docs/models/: dialect.md  package.md  resource.md  schema.md  usage.md
docs/plugins/: ckan.md  cli.md  datacite.md  dcat.md  github.md  pandas.md  polars.md  sql.md  zenodo.md
docs/reference/: schema.md
documentation/installation/: index.html
documentation/usage/: index.html
dplib/: __init__.py  conftest.py  error.py  model.py  platform.py  profile.py  settings.py  types.py
dplib/LICENSES/: MIT.txt
dplib/__spec__/: test_model.py
dplib/actions/__spec__/: test_dialect_check.py  test_metadata_convert.py  test_package_check.py  test_resource_check.py  test_schema_check.py
dplib/actions/dialect/: check.py
dplib/actions/dialect/__spec__/: test_check.py
dplib/actions/metadata/: check.py  convert.py
dplib/actions/package/: check.py  convert.py
dplib/actions/package/__spec__/: test_check.py
dplib/actions/profile/: check.py
dplib/actions/resource/: check.py  convert.py
dplib/actions/resource/__spec__/: test_check.py
dplib/actions/schema/: check.py
dplib/actions/schema/__spec__/: test_check.py
dplib/errors/: metadata.py
dplib/helpers/: data.py  datetime.py  dict.py  file.py  path.py  profile.py  resource.py
dplib/helpers/__spec__/: test_file.py  test_path.py
dplib/models/: __init__.py  contributor.py  license.py  missingValues.py  source.py
dplib/models/dialect/: __init__.py  dialect.py  itemType.py  types.py
dplib/models/dialect/__spec__/: test_dialect.py
dplib/models/field/: __init__.py  categories.py  constraints.py  field.py  types.py
dplib/models/field/__spec__/: test_field.py
dplib/models/field/constraints/: __init__.py  base.py  collection.py  enumerable.py  json.py  string.py  value.py
dplib/models/field/datatypes/: __init__.py  any.py  array.py  base.py  boolean.py  date.py  datetime.py  duration.py  geojson.py  geopoint.py  integer.py  list.py  number.py  object.py  string.py  time.py  year.py  yearmonth.py
dplib/models/package/: __init__.py  package.py
dplib/models/package/__spec__/: test_package.py
dplib/models/profile/: constraint.py  profile.py  rule.py
dplib/models/profile/__spec__/: test_profile.py
dplib/models/resource/: __init__.py  hash.py  resource.py
dplib/models/resource/__spec__/: test_resource.py
dplib/models/resource/datatypes/: table.py
dplib/models/schema/: __init__.py  constraints.py  field.py  fieldsMatch.py  foreignKey.py  foreignKeyReference.py  schema.py  types.py
dplib/models/schema/__spec__/: __init__.py  test_field.py  test_schema.py
dplib/plugins/ckan/models/: __init__.py  field.py  organization.py  package.py  resource.py  schema.py  tag.py
dplib/plugins/cli/: __main__.py  program.py
dplib/plugins/cli/commands/: __init__.py  main.py  version.py
dplib/plugins/cli/helpers/: check.py
dplib/plugins/cli/options/: convert.py  path.py  system.py
dplib/profiles/: data-package.json  data-resource.json  metadata-profile.json  table-dialect.json
dplib/profiles/1.0/: datapackage.json.license
dplib/system/: __init__.py  model.py
dplib/system/__spec__/: test_model.py
dpspecs/: __init__.py  model.py  settings.py
dpspecs/models/: __init__.py  base.py  license.py  schema.py
dpspecs/models/package/: package.py
dpspecs/models/resource/: parsedHash.py  resource.py
dpspecs/models/schema/: __init__.py  constraints.py  field.py  fieldType.py  foreignKey.py  foreignKeyReference.py  schema.py
dpspecs/plugins/ckan/: __init__.py  organization.py  package.py  resource.py  tag.py
dpspecs/plugins/datacite/: __init__.py  contributor.py  description.py  identifier.py  package.py  rights.py  subject.py  title.py
dpspecs/plugins/github/: __init__.py  license.py  organization.py  owner.py  package.py  resource.py
dpspecs/plugins/pandas/: __init__.py  field.py  schema.py
dpspecs/plugins/polars/: field.py  schema.py
dpspecs/plugins/sql/: field.py  schema.py  settings.py
dpspecs/plugins/zenodo/: creator.py  files.py  metadata.py  package.py  pid.py  resource.py  subject.py
installation/: index.html
models/dialect/: index.html
models/package/: index.html
models/resource/: index.html
models/schema/: index.html
plugins/ckan/: index.html
plugins/cli/: index.html
plugins/datacite/: index.html
plugins/dcat/: index.html
plugins/github/: index.html
plugins/pandas/: index.html
plugins/polars/: index.html
plugins/sql/: index.html
plugins/zenodo/: index.html
reference/schema/: index.html
search/: search_index.json
tests/: conftest.py  test_settings.py
tests/models/: test_schema.py
validating-metadata/: index.html
working-with-models/: index.html
(+73 files in other folders)
